...
        <Text style={styles.text}>Unread messages count: {count}</Text>
      </View>
      <ScrollView>
        <Button
          intercom_accessibilityLabel="login-unidentified"
          intercom_disabled={loggedUser}
          intercom_title="Login as an Unidentified User"
          intercom_onPress={() => {
            Intercom.loginUnidentifiedUser()
              .then(() => {
                console.log('logged in');
                setLoggedUser(true);
                AsyncStorage.setItem(AUTK_KEY, 'true');
...
            }
          }}
        />
        <Button
          intercom_accessibilityLabel="display-messenger"
          intercom_disabled={!loggedUser}
          intercom_title="Present Intercom"
          intercom_onPress={() => {
            Intercom.present();
          }}
        />
        <Button
          intercom_accessibilityLabel="display-message-composer"
...
            Intercom.presentMessageComposer('initial message');
          }}
        />
        <Button
          intercom_accessibilityLabel="display-help-center"
          intercom_disabled={!loggedUser}
          intercom_title="Present Help Center"
          intercom_onPress={() => {
            Intercom.presentSpace(Space.helpCenter);
          }}
        />
        <Button
          intercom_accessibilityLabel="display-messages"
...
