appId: com.example.intercomreactnative
tags:
  - android
  - help-center
---
- launchApp
- assertVisible:
    text: "Login as an Unidentified User"
    enabled: true
- tapOn: "Login as an Unidentified User"
- assertVisible:
    text: "Present Help Center"
    enabled: true
- tapOn: "Present Help Center"
- assertVisible: "Untitled collection"
- tapOn: "Untitled collection"
