appId: com.example.intercomreactnative
tags:
  - ios
  - help-center
---
- launchApp
- tapOn: "Login as an Unidentified User"
- assertVisible:
    text: "Present Help Center"
    enabled: true
- tapOn: "Present Help Center"
- assertVisible: "Untitled collection"
- tapOn: "Untitled collection"


