appId: com.example.intercomreactnative
tags:
  - android
  - messenger
---
- launchApp
- tapOn: 'Login as an Unidentified User'
- assertVisible:
    text: 'Present Intercom'
    enabled: true
- tapOn: 'Present Intercom'
- tapOn: 'Messages'
